// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator should match the snapshot 1`] = `
<DocumentFragment>
  <section
    class="container"
  >
    <input
      class="input"
      readonly=""
      type="text"
      value="0"
    />
    <div
      class="itemsContainer"
    >
      <button
        class="items"
        type="button"
      >
        AC
      </button>
      <button
        class="items"
        type="button"
      >
        +/-
      </button>
      <button
        class="items"
        type="button"
      >
        %
      </button>
      <button
        class="items orange"
        type="button"
      >
        ÷
      </button>
      <button
        class="items"
        type="button"
      >
        7
      </button>
      <button
        class="items"
        type="button"
      >
        8
      </button>
      <button
        class="items"
        type="button"
      >
        9
      </button>
      <button
        class="items orange"
        type="button"
      >
        x
      </button>
      <button
        class="items"
        type="button"
      >
        4
      </button>
      <button
        class="items"
        type="button"
      >
        5
      </button>
      <button
        class="items"
        type="button"
      >
        6
      </button>
      <button
        class="items orange"
        type="button"
      >
        -
      </button>
      <button
        class="items"
        type="button"
      >
        1
      </button>
      <button
        class="items"
        type="button"
      >
        2
      </button>
      <button
        class="items"
        type="button"
      >
        3
      </button>
      <button
        class="items orange"
        type="button"
      >
        +
      </button>
      <button
        class="items long"
        type="button"
      >
        0
      </button>
      <button
        class="items"
        type="button"
      >
        .
      </button>
      <button
        class="items orange"
        type="button"
      >
        =
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Calculator should update the display and match the snapshot after clicking associated buttons 1`] = `
<div>
  <section
    class="container"
  >
    <input
      class="input"
      type="text"
      value="10"
    />
    <div
      class="itemsContainer"
    >
      <button
        class="items"
        type="button"
      >
        AC
      </button>
      <button
        class="items"
        type="button"
      >
        +/-
      </button>
      <button
        class="items"
        type="button"
      >
        %
      </button>
      <button
        class="items orange"
        type="button"
      >
        ÷
      </button>
      <button
        class="items"
        type="button"
      >
        7
      </button>
      <button
        class="items"
        type="button"
      >
        8
      </button>
      <button
        class="items"
        type="button"
      >
        9
      </button>
      <button
        class="items orange"
        type="button"
      >
        x
      </button>
      <button
        class="items"
        type="button"
      >
        4
      </button>
      <button
        class="items"
        type="button"
      >
        5
      </button>
      <button
        class="items"
        type="button"
      >
        6
      </button>
      <button
        class="items orange"
        type="button"
      >
        -
      </button>
      <button
        class="items"
        type="button"
      >
        1
      </button>
      <button
        class="items"
        type="button"
      >
        2
      </button>
      <button
        class="items"
        type="button"
      >
        3
      </button>
      <button
        class="items orange"
        type="button"
      >
        +
      </button>
      <button
        class="items long"
        type="button"
      >
        0
      </button>
      <button
        class="items"
        type="button"
      >
        .
      </button>
      <button
        class="items orange"
        type="button"
      >
        =
      </button>
    </div>
  </section>
</div>
`;
